--- a/data_products/data_product_1/pyproject.toml
+++ b/data_products/data_product_1/pyproject.toml
@@ -6,12 +6,15 @@ readme = "README.md"
 requires-python = ">=3.11"
 
 dependencies = [
+    "azure-cli==2.82.0",
+    "azure-search-documents==11.7.0b2",
     "databricks-connect==15.4.*",
     "ipython>=9.9.0",
-    "mypy>=1.19.1",
+    "langchain>=1.2.7",
     "numpy",
-    "ruff>=0.14.14",
+    "pip-licenses>=5.5.1",
     "scikit-learn",
+    "semantic-kernel>=1.37.0",
 ]
 
 [project.optional-dependencies]
@@ -35,11 +38,13 @@ package-dir = { "" = "src" }
 where = ["src"]
 include = ["data_product_1*"]
 
+
+
 # --------------------
 # mypy configuration
 # --------------------
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.12"
 strict = true
 mypy_path = "src"
 namespace_packages = true
@@ -67,3 +72,16 @@ exclude = [
 [tool.pytest.ini_options]
 addopts = "-ra -q"
 testpaths = ["tests"]
+
+[dependency-groups]
+dev = [
+    "azure-cli>=2.0.65",
+    "azure-identity==1.16.1",
+    "bandit>=1.9.3",
+    "isort>=7.0.0",
+    "mypy>=1.19.1",
+    "openai>=2.16.0",
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.14",
+]
