--- a/ml_products/credit_decision/pyproject.toml
+++ b/ml_products/credit_decision/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11"
 
 dependencies = [
     "databricks-connect==15.4.0",
+    "ipython>=9.10.0",
+    "mlflow>=3.9.0",
     "numpy>=1.26.4",
     "scikit-learn>=1.8.0",
 ]
