--- a/ml_products/credit_decision/pyproject.toml
+++ b/ml_products/credit_decision/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
 dev = [
 ]
 
+[project.scripts]
+credit_decision_train = "credit_decision.main:main"
 
 [build-system]
 requires = ["setuptools>=68", "wheel"]
