--- a/ml_products/credit_decision/Makefile
+++ b/ml_products/credit_decision/Makefile
@@ -16,15 +16,16 @@ mypy:
 ruff:
 	$(PYRUN) ruff check $(SRC)
 
-
-
 lint: ruff mypy
 
 bandit:
-	uv run bandit -r src/data_product_1 -ll -ii
+	uv run bandit -r src/credit_decision -ll -ii
 safety:
 	uv run safety check --full-report
 
+license_check:
+	uv run pip-licenses
+	uv run pip-licenses --fail-on "GPL" --partial-match
 # Tests
 test:
 	uv run pytest tests
