--- a/ml_products/credit_decision/pyproject.toml
+++ b/ml_products/credit_decision/pyproject.toml
@@ -43,7 +43,7 @@ strict = true
 mypy_path = "src"
 namespace_packages = true
 explicit_package_bases = true
-ignore_missing_imports = false
+ignore_missing_imports = true
 warn_unused_ignores = true
 warn_return_any = true
 warn_unreachable = true
